--- a/src/Wrapped Green/styles/styles.css
+++ b/src/Wrapped Green/styles/styles.css
@@ -65,7 +65,7 @@ span {
 .nav-menu-container {
   top: 0;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   height: 100px;
   display: flex;
   justify-content: space-around;
@@ -278,13 +278,13 @@ span {
 
 #footer {
   display: flex;
-  height: 400px;
+  height: 260px;
   margin-top: 130px;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   background-color: var(--clr-4);
-  border-radius: 100% 100% 0% 0%;
+  border-radius: 90% 90% 0% 0%;
 }
 
 .footer__logo-container {
@@ -297,7 +297,7 @@ span {
 
 .footer__menu-links {
   position: relative;
-  bottom: 60px;
+  bottom: 50px;
   display: flex;
   width: 400px;
   justify-content: space-between;
@@ -312,7 +312,7 @@ span {
 
 .food__rss-container {
   position: relative;
-  bottom: 60px;
+  bottom: 20px;
   display: flex;
   width: 250px;
   justify-content: space-between;
